--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,4 +1,15 @@
 zh-CN:
+  activemodel:
+    errors:
+      models:
+        session:
+          attributes:
+            email:
+              blank: 请输入邮箱
+              invalid: 邮箱必须含有@字符
+            password:
+              blank: 请输入密码
+              too_short: 密码不能少于6个字符
   activerecord:
     errors:
       models:
