--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,7 @@ zh-CN:
             email:
               blank: 请输入邮箱
               invalid: 邮箱必须含有@字符
+              not_found: 该邮箱未注册
             password:
               blank: 请输入密码
               too_short: 密码不能少于6个字符
