--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -11,6 +11,7 @@ zh-CN:
             password:
               blank: 请输入密码
               too_short: 密码不能少于6个字符
+              mismatch: 密码与用户名不匹配
   activerecord:
     errors:
       models:
