--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -15,6 +15,12 @@ zh-CN:
   activerecord:
     errors:
       models:
+        record:
+          attributes:
+            amount:
+              blank: 金额不能为空
+            category:
+              blank: 类型不能为空
         user:
           attributes:
             password:
