--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -33,3 +33,7 @@ zh-CN:
             password_confirmation:
               blank: 确认密码不能为空
               confirmation: 两次密码不匹配
+        tag:
+          attributes:
+            name:
+              blank: 标签名不能为空
