--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -21,6 +21,8 @@ zh-CN:
               blank: 金额不能为空
             category:
               blank: 类型不能为空
+            user:
+              required: 用户不能为空
         user:
           attributes:
             password:
@@ -37,10 +39,15 @@ zh-CN:
           attributes:
             name:
               blank: 标签名不能为空
+            user:
+              required: 用户不能为空
         tagging:
           attributes:
             record:
               required: 记录不能为空
             tag:
               required: 标签不能为空
+            user:
+              required: 用户不能为空
+
 
